ecmascript/parser/tests/test262-error-references/fail/39551fb86dcd3b29.js.stderr
error: Unexpected token `;`. Expected this, import, async, function, [ for array literal, { for object literal, @ for decorator, function, class, null, true, false, number, bigint, string, regexp, ` for template literal, (, or an identifier
 --> $DIR/tests/test262-parser/fail/39551fb86dcd3b29.js:1:21
  |
1 | for (const let = 1;;;) {}
  |                     ^

